# tic-tac-toe-magnus-rb

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  Gemfile  LICENSE  README.md  Rakefile  default.nix  flake.nix  shell.nix  tic_tac_toe_magnus.gemspec
.github/workflows/: ci.yml  gem-install-check.yml  nix.yml
examples/: demo.rb
ext/tictactoe/: Cargo.toml  extconf.rb
ext/tictactoe/src/: lib.rs
lib/: tic_tac_toe_magnus.rb  tictactoe.rb
lib/tictactoe/: version.rb
nix/: bundix-workflow.md  vendor-cargo-deps.nix
test/: test_draw_detection.rb  test_helper.rb  test_initial_state.rb  test_integration.rb  test_make_move.rb  test_minimax_ai.rb  test_rendering.rb  test_require_name.rb  test_reset.rb  test_win_detection.rb
